# deep-learning-ecosystem

./: .gitignore  AGENTS.md  CLAUDE.md  CONVENTION.md  IDEA.md  LICENSE  README.md  SKILL.md  TODO.md  pyproject.toml
configs/: base.yaml  template.yaml
configs/demo/: classification.yaml  regression.yaml  regression_ddp.yaml  regression_ensemble.yaml  regression_tuning.yaml  synthetic.yaml
docs/: cli_cheat_sheet.md
scripts/: ensemble.py  evaluate.py  generate_synthetic.py  predict.py  preprocess.py  run_demo_classification.sh  run_demo_regression.sh  train.py  tune.py
src/dlecosys/: __init__.py
src/dlecosys/models/: __init__.py  mlp.py
src/dlecosys/shared/: __init__.py  artifact.py  reproducibility.py
tests/: conftest.py
tests/models/: test_mlp.py
tests/shared/: test_reproducibility.py
tests/shared/config/: test_distributed.py  test_experiment.py  test_loader.py  test_logging.py  test_scheduler.py  test_schema.py
tests/shared/data/: test_fold_preprocessing.py  test_sources.py  test_splitters.py  test_tabular_transforms.py  test_validation.py
tests/shared/ensembling/: test_aggregation.py  test_bagging.py  test_bootstrappers.py  test_pruning.py  test_runner_helpers.py  test_schema.py
tests/shared/inference/: test_predictor.py
tests/shared/metrics/: test_classification.py  test_regression.py
tests/shared/models/: test_factory.py
tests/shared/preprocessing/: test_scalers.py  test_tokenizers.py
tests/shared/run/: test_ensemble_layout.py  test_layout.py  test_study_layout.py
tests/shared/training/: test_callbacks.py  test_lr_finder.py  (+4 more)
(+53 files in other folders)
